// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step1 - onlyKeepAppliedThemeClasses (snapshots) > case basic > basic 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: red;
  }
  .modern .btn {
    color: green;
  }
}

@theme {
  --theme-var: var(--color-red);
}

@media (max-width: 768px) {
  .test {
    color: yellow;
  }
}"
`;

exports[`step1 - onlyKeepAppliedThemeClasses (snapshots) > case class-selectors > class-selectors 1`] = `
"@layer components {
  .btn {
    color: red;
    background-color: blue;
    padding: 8px;
  }
  .modern .btn {
    color: green;
    border: 1px solid red;
  }
}"
`;

exports[`step1 - onlyKeepAppliedThemeClasses (snapshots) > case comma-separated > comma-separated 1`] = `
"@layer components {
  .btn,
  .icon-btn {
    color: red;
  }
  .modern .btn,
  .modern .icon-btn {
    color: green;
  }
}"
`;

exports[`step1 - onlyKeepAppliedThemeClasses (snapshots) > case dark-variants > dark-variants 1`] = `
"@layer components {
  .btn {
    color: red;
  }
  .modern .btn {
    color: yellow;
  }
  .modern.dark .btn {
    color: pink;
  }
  .dark.modern .btn {
    color: purple;
  }
}"
`;

exports[`step1 - onlyKeepAppliedThemeClasses (snapshots) > case mixed-selector-list > mixed-selector-list 1`] = `
"@layer components {
  .modern .btn {
    color: red;
  }
}"
`;

exports[`step1 - onlyKeepAppliedThemeClasses (snapshots) > case multiple-theme-classes > multiple-theme-classes 1`] = `
"@layer components {
  .btn {
    color: red;
  }
  .modern .btn {
    color: green;
  }
  .modern .btn {
    color: blue;
  }
}"
`;

exports[`step1 - onlyKeepAppliedThemeClasses (snapshots) > case nested-selectors > nested-selectors 1`] = `
"@layer components {
  .btn {
    color: red;
    background-color: blue;
    &:focus-visible {
      outline: 2px solid red;
    }
    &:active {
      transform: translate(2px, 2px);
    }
  }
  .modern .btn {
    color: green;
    border: 1px solid red;
    &:hover {
      transform: scale(0.99);
    }
    &:active {
      transform: translate(-2px, -2px);
    }
  }
}"
`;

exports[`step1 - onlyKeepAppliedThemeClasses (snapshots) > case theme-class-not-leading > theme-class-not-leading 1`] = `
"@layer components {
  .modern .btn {
    color: green;
  }
}"
`;
